--- a/AtmEmpresaConsultoria/app/src/main/AndroidManifest.xml
+++ b/AtmEmpresaConsultoria/app/src/main/AndroidManifest.xml
@@ -8,14 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EmpresaActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".EmpresaActivity" />
+        <activity android:name=".ServicoActivity" />
+        <activity android:name=".ClienteActivity" />
+        <activity android:name=".ContatoActivity"></activity>
     </application>
 
 </manifest>
